# tomoro

./: .env_sample  .gitignore  README.md  pyproject.toml
notebooks/: Evaluate Candidate Tables Retrieval.ipynb  Evaluate Table Selection.ipynb  System Evaluation.ipynb
tomoro/: config.py  generate_sql_db.py  ingest.py  record.py  server.py  utils.py
tomoro/retrieve/: prompts.py  retriever.py
tomoro/sql/: __init__.py  prompts.py  sql_generator.py
tomoro/vector_store/: __init__.py  document.py  store.py
