[project]
name = "tomoro"
version = "0.1.0"
description = "Solution using the ConvFinQA dataset to support Tomoro application."
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <4.0"
langchain = "^0.3.25"
notebook = "^7.4.2"
dotenv = "^0.9.9"
langchain-chroma = "^0.2.3"
langchain-huggingface = "^0.2.0"
langchain-openai = "^0.3.16"
langchain-community = "^0.3.23"
langchain-ollama = "^0.3.2"
tqdm = "^4.67.1"
matplotlib = ">=3.9.0,<3.10.0"
pandas = "^2.2.3"
